@@ -26,13 +26,15 @@
  */
 package org.niis.xroad.securityserver.restapi.openapi;
 
+import ee.ria.xroad.common.AddOnStatusDiagnostics;
+import ee.ria.xroad.common.BackupEncryptionStatusDiagnostics;
 import ee.ria.xroad.common.DiagnosticsErrorCodes;
-import ee.ria.xroad.common.PortNumbers;
-import ee.ria.xroad.common.SystemProperties;
+import ee.ria.xroad.common.MessageLogArchiveEncryptionMember;
+import ee.ria.xroad.common.MessageLogEncryptionStatusDiagnostics;
 import ee.ria.xroad.common.util.TimeUtils;
 
-import org.junit.BeforeClass;
 import org.junit.Test;
+import org.niis.xroad.confclient.model.DiagnosticsStatus;
 import org.niis.xroad.restapi.exceptions.DeviationAwareRuntimeException;
 import org.niis.xroad.restapi.exceptions.DeviationCodes;
 import org.niis.xroad.securityserver.restapi.openapi.model.AddOnStatusDto;
@@ -46,9 +48,11 @@ import org.niis.xroad.securityserver.restapi.openapi.model.OcspStatusDto;
 import org.niis.xroad.securityserver.restapi.openapi.model.TimestampingServiceDiagnosticsDto;
 import org.niis.xroad.securityserver.restapi.openapi.model.TimestampingStatusDto;
 import org.niis.xroad.securityserver.restapi.service.diagnostic.DiagnosticReportService;
+import org.niis.xroad.signer.api.dto.CertificationServiceDiagnostics;
+import org.niis.xroad.signer.api.dto.CertificationServiceStatus;
+import org.niis.xroad.signer.api.dto.OcspResponderStatus;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
-import org.springframework.cloud.contract.wiremock.AutoConfigureWireMock;
 import org.springframework.core.io.Resource;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
@@ -56,16 +60,15 @@ import org.springframework.security.access.AccessDeniedException;
 import org.springframework.security.test.context.support.WithMockUser;
 import org.springframework.test.context.bean.override.mockito.MockitoBean;
 
-import java.io.IOException;
 import java.nio.charset.StandardCharsets;
+import java.time.Instant;
 import java.time.LocalTime;
 import java.time.OffsetDateTime;
+import java.time.temporal.ChronoUnit;
+import java.util.List;
+import java.util.Map;
 import java.util.Set;
 
-import static com.github.tomakehurst.wiremock.client.WireMock.aResponse;
-import static com.github.tomakehurst.wiremock.client.WireMock.get;
-import static com.github.tomakehurst.wiremock.client.WireMock.stubFor;
-import static com.github.tomakehurst.wiremock.client.WireMock.urlEqualTo;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.junit.Assert.assertEquals;
@@ -77,7 +80,6 @@ import static org.mockito.Mockito.when;
 @SpringBootTest(webEnvironment = SpringBootTest.WebEnvironment.RANDOM_PORT,
         properties = {"spring.main.lazy-initialization=true"})
 @WithMockUser(authorities = {"DIAGNOSTICS"})
-@AutoConfigureWireMock(port = PortNumbers.ADMIN_PORT)
 public class DiagnosticsApiControllerTest extends AbstractApiControllerTestContext {
 
     private static final OffsetDateTime PREVIOUS_UPDATE = TimeUtils.offsetDateTimeNow().with(LocalTime.of(10, 42));
@@ -97,37 +99,30 @@ public class DiagnosticsApiControllerTest extends AbstractApiControllerTestConte
     @MockitoBean
     private DiagnosticReportService diagnosticReportService;
 
-    @BeforeClass
-    public static void setUp() {
-        // Make them point to Wiremock port
-        System.setProperty(SystemProperties.CONFIGURATION_CLIENT_ADMIN_PORT, Integer.toString(PortNumbers.ADMIN_PORT));
-        System.setProperty(SystemProperties.SIGNER_ADMIN_PORT, Integer.toString(PortNumbers.ADMIN_PORT));
-    }
-
     @Test
-    public void getAddOnDiagnostics() {
-        stubForDiagnosticsRequest("/addonstatus", "{\"messageLogEnabled\":true}");
+    public void getAddOnDiagnostics() throws Exception {
+        when(proxyRpcClient.getAddOnStatus()).thenReturn(new AddOnStatusDiagnostics(true));
         ResponseEntity<AddOnStatusDto> response = diagnosticsApiController.getAddOnDiagnostics();
         assertEquals(HttpStatus.OK, response.getStatusCode());
         assertEquals(true, response.getBody().getMessagelogEnabled());
 
-        stubForDiagnosticsRequest("/addonstatus", "{\"messageLogEnabled\":false}");
+        when(proxyRpcClient.getAddOnStatus()).thenReturn(new AddOnStatusDiagnostics(false));
         response = diagnosticsApiController.getAddOnDiagnostics();
         assertEquals(HttpStatus.OK, response.getStatusCode());
         assertEquals(false, response.getBody().getMessagelogEnabled());
     }
 
     @Test
-    public void getBackupEncryptionDiagnostics() {
-        stubForDiagnosticsRequest("/backup-encryption-status",
-                "{\"backupEncryptionStatus\":true,\"backupEncryptionKeys\":[\"keyid\"]}");
+    public void getBackupEncryptionDiagnostics() throws Exception {
+        when(proxyRpcClient.getBackupEncryptionStatus()).thenReturn(
+                new BackupEncryptionStatusDiagnostics(true, List.of("keyid")));
         ResponseEntity<BackupEncryptionStatusDto> response = diagnosticsApiController.getBackupEncryptionDiagnostics();
         assertEquals(HttpStatus.OK, response.getStatusCode());
         assertEquals(true, response.getBody().getBackupEncryptionStatus());
         assertEquals(1, response.getBody().getBackupEncryptionKeys().size());
 
-        stubForDiagnosticsRequest("/backup-encryption-status",
-                "{\"backupEncryptionStatus\":false,\"backupEncryptionKeys\":[]}");
+        when(proxyRpcClient.getBackupEncryptionStatus()).thenReturn(
+                new BackupEncryptionStatusDiagnostics(false, List.of()));
         response = diagnosticsApiController.getBackupEncryptionDiagnostics();
         assertEquals(HttpStatus.OK, response.getStatusCode());
         assertEquals(false, response.getBody().getBackupEncryptionStatus());
@@ -135,11 +130,11 @@ public class DiagnosticsApiControllerTest extends AbstractApiControllerTestConte
     }
 
     @Test
-    public void getMessageLogEncryptionDiagnostics() {
-        stubForDiagnosticsRequest("/message-log-encryption-status",
-                "{\"messageLogArchiveEncryptionStatus\":true,\"messageLogDatabaseEncryptionStatus\":true,"
-                        + "\"messageLogGroupingRule\":\"none\",\"members\":[{\"memberId\":\"memberId\","
-                        + "\"keys\":[\"key\"], \"defaultKeyUsed\":false}]}");
+    public void getMessageLogEncryptionDiagnostics() throws Exception {
+        when(proxyRpcClient.getMessageLogEncryptionStatus()).thenReturn(
+                new MessageLogEncryptionStatusDiagnostics(true, true, "none",
+                        List.of(new MessageLogArchiveEncryptionMember("memberId", Set.of("key"), false)))
+        );
         ResponseEntity<MessageLogEncryptionStatusDto> response = diagnosticsApiController
                 .getMessageLogEncryptionDiagnostics();
         assertEquals(HttpStatus.OK, response.getStatusCode());
@@ -148,9 +143,10 @@ public class DiagnosticsApiControllerTest extends AbstractApiControllerTestConte
         assertEquals(GROUPING_RULE, response.getBody().getMessageLogGroupingRule());
         assertEquals(1, response.getBody().getMembers().size());
 
-        stubForDiagnosticsRequest("/message-log-encryption-status",
-                "{\"messageLogArchiveEncryptionStatus\":false,\"messageLogDatabaseEncryptionStatus\":false, "
-                        + "\"messageLogGroupingRule\":\"none\",\"members\":[]}");
+        when(proxyRpcClient.getMessageLogEncryptionStatus()).thenReturn(
+                new MessageLogEncryptionStatusDiagnostics(false, false, "none",
+                        List.of())
+        );
         response = diagnosticsApiController.getMessageLogEncryptionDiagnostics();
         assertEquals(HttpStatus.OK, response.getStatusCode());
         assertEquals(false, response.getBody().getMessageLogArchiveEncryptionStatus());
@@ -160,12 +156,11 @@ public class DiagnosticsApiControllerTest extends AbstractApiControllerTestConte
     }
 
     @Test
-    public void getGlobalConfDiagnosticsSuccess() {
-        final OffsetDateTime prevUpdate = TimeUtils.offsetDateTimeNow();
-        final OffsetDateTime nextUpdate = prevUpdate.plusHours(1);
-        stubForDiagnosticsRequest("/status",
-                "{\"returnCode\":" + DiagnosticsErrorCodes.RETURN_SUCCESS + ",\"prevUpdate\":\"" + prevUpdate
-                        + "\",\"nextUpdate\":\"" + nextUpdate + "\"}");
+    public void getGlobalConfDiagnosticsSuccess() throws Exception {
+        final Instant prevUpdate = Instant.now().truncatedTo(ChronoUnit.MILLIS);
+        final Instant nextUpdate = prevUpdate.plus(1, ChronoUnit.HOURS);
+        when(confClientRpcClient.getStatus()).thenReturn(
+                createDiagnosticsStatus(DiagnosticsErrorCodes.RETURN_SUCCESS, prevUpdate, nextUpdate));
 
         ResponseEntity<GlobalConfDiagnosticsDto> response = diagnosticsApiController.getGlobalConfDiagnostics();
 
@@ -173,16 +168,17 @@ public class DiagnosticsApiControllerTest extends AbstractApiControllerTestConte
         GlobalConfDiagnosticsDto globalConfDiagnostics = response.getBody();
         assertEquals(ConfigurationStatusDto.SUCCESS, globalConfDiagnostics.getStatusCode());
         assertEquals(DiagnosticStatusClassDto.OK, globalConfDiagnostics.getStatusClass());
-        assertEquals(prevUpdate, globalConfDiagnostics.getPrevUpdateAt());
-        assertEquals(nextUpdate, globalConfDiagnostics.getNextUpdateAt());
+        assertEquals(prevUpdate, globalConfDiagnostics.getPrevUpdateAt().toInstant());
+        assertEquals(nextUpdate, globalConfDiagnostics.getNextUpdateAt().toInstant());
     }
 
     @Test
-    public void getGlobalConfDiagnosticsWaiting() {
-        final OffsetDateTime prevUpdate = TimeUtils.offsetDateTimeNow();
-        final OffsetDateTime nextUpdate = prevUpdate.plusHours(1);
-        stubForDiagnosticsRequest("/status", "{\"returnCode\":" + DiagnosticsErrorCodes.ERROR_CODE_UNINITIALIZED + ","
-                + "\"prevUpdate\":\"" + prevUpdate + "\",\"nextUpdate\":\"" + nextUpdate + "\"}");
+    public void getGlobalConfDiagnosticsWaiting() throws Exception {
+        final Instant prevUpdate = Instant.now().truncatedTo(ChronoUnit.MILLIS);
+        final Instant nextUpdate = prevUpdate.plus(1, ChronoUnit.HOURS);
+
+        when(confClientRpcClient.getStatus()).thenReturn(
+                createDiagnosticsStatus(DiagnosticsErrorCodes.ERROR_CODE_UNINITIALIZED, prevUpdate, nextUpdate));
 
         ResponseEntity<GlobalConfDiagnosticsDto> response = diagnosticsApiController.getGlobalConfDiagnostics();
 
@@ -190,17 +186,17 @@ public class DiagnosticsApiControllerTest extends AbstractApiControllerTestConte
         GlobalConfDiagnosticsDto globalConfDiagnostics = response.getBody();
         assertEquals(ConfigurationStatusDto.ERROR_CODE_UNINITIALIZED, globalConfDiagnostics.getStatusCode());
         assertEquals(DiagnosticStatusClassDto.WAITING, globalConfDiagnostics.getStatusClass());
-        assertEquals(prevUpdate, globalConfDiagnostics.getPrevUpdateAt());
-        assertEquals(nextUpdate, globalConfDiagnostics.getNextUpdateAt());
+        assertEquals(prevUpdate, globalConfDiagnostics.getPrevUpdateAt().toInstant());
+        assertEquals(nextUpdate, globalConfDiagnostics.getNextUpdateAt().toInstant());
     }
 
     @Test
-    public void getGlobalConfDiagnosticsFailNextUpdateTomorrow() {
-        final OffsetDateTime prevUpdate = TimeUtils.offsetDateTimeNow();
-        final OffsetDateTime nextUpdate = prevUpdate.plusDays(1);
-        stubForDiagnosticsRequest("/status",
-                "{\"returnCode\":" + DiagnosticsErrorCodes.ERROR_CODE_INTERNAL + ",\"prevUpdate\":\"" + prevUpdate
-                        + "\",\"nextUpdate\":\"" + nextUpdate + "\"}");
+    public void getGlobalConfDiagnosticsFailNextUpdateTomorrow() throws Exception {
+        final Instant prevUpdate = Instant.now().truncatedTo(ChronoUnit.MILLIS);
+        final Instant nextUpdate = prevUpdate.plus(1, ChronoUnit.DAYS);
+
+        when(confClientRpcClient.getStatus()).thenReturn(
+                createDiagnosticsStatus(DiagnosticsErrorCodes.ERROR_CODE_INTERNAL, prevUpdate, nextUpdate));
 
         ResponseEntity<GlobalConfDiagnosticsDto> response = diagnosticsApiController.getGlobalConfDiagnostics();
 
@@ -208,17 +204,17 @@ public class DiagnosticsApiControllerTest extends AbstractApiControllerTestConte
         GlobalConfDiagnosticsDto globalConfDiagnostics = response.getBody();
         assertEquals(ConfigurationStatusDto.ERROR_CODE_INTERNAL, globalConfDiagnostics.getStatusCode());
         assertEquals(DiagnosticStatusClassDto.FAIL, globalConfDiagnostics.getStatusClass());
-        assertEquals(prevUpdate, globalConfDiagnostics.getPrevUpdateAt());
-        assertEquals(nextUpdate, globalConfDiagnostics.getNextUpdateAt());
+        assertEquals(prevUpdate, globalConfDiagnostics.getPrevUpdateAt().toInstant());
+        assertEquals(nextUpdate, globalConfDiagnostics.getNextUpdateAt().toInstant());
     }
 
     @Test
-    public void getGlobalConfDiagnosticsFailPreviousUpdateYesterday() {
-        final OffsetDateTime prevUpdate = TimeUtils.offsetDateTimeNow().with(LocalTime.of(0, 0));
-        final OffsetDateTime nextUpdate = prevUpdate.plusDays(1);
-        stubForDiagnosticsRequest("/status",
-                "{\"returnCode\":" + ERROR_CODE_UNKNOWN + ",\"prevUpdate\":\"" + prevUpdate + "\",\"nextUpdate\":\""
-                        + nextUpdate + "\"}");
+    public void getGlobalConfDiagnosticsFailPreviousUpdateYesterday() throws Exception {
+        final Instant prevUpdate = TimeUtils.offsetDateTimeNow().with(LocalTime.of(0, 0)).toInstant();
+        final Instant nextUpdate = prevUpdate.plus(1, ChronoUnit.DAYS);
+
+        when(confClientRpcClient.getStatus()).thenReturn(
+                createDiagnosticsStatus(ERROR_CODE_UNKNOWN, prevUpdate, nextUpdate));
 
         ResponseEntity<GlobalConfDiagnosticsDto> response = diagnosticsApiController.getGlobalConfDiagnostics();
 
@@ -226,25 +222,24 @@ public class DiagnosticsApiControllerTest extends AbstractApiControllerTestConte
         GlobalConfDiagnosticsDto globalConfDiagnostics = response.getBody();
         assertEquals(ConfigurationStatusDto.UNKNOWN, globalConfDiagnostics.getStatusCode());
         assertEquals(DiagnosticStatusClassDto.FAIL, globalConfDiagnostics.getStatusClass());
-        assertEquals(prevUpdate, globalConfDiagnostics.getPrevUpdateAt());
-        assertEquals(nextUpdate, globalConfDiagnostics.getNextUpdateAt());
+        assertEquals(prevUpdate, globalConfDiagnostics.getPrevUpdateAt().toInstant());
+        assertEquals(nextUpdate, globalConfDiagnostics.getNextUpdateAt().toInstant());
     }
 
     @Test
-    public void getGlobalConfDiagnosticsException() {
-        stubFor(get(urlEqualTo("/status"))
-                .willReturn(aResponse().withStatus(HttpStatus.INTERNAL_SERVER_ERROR.value())));
+    public void getGlobalConfDiagnosticsException() throws Exception {
+        when(confClientRpcClient.getStatus()).thenThrow(new RuntimeException());
         DeviationAwareRuntimeException exception =
                 assertThrows(DeviationAwareRuntimeException.class, diagnosticsApiController::getGlobalConfDiagnostics);
         assertEquals(DeviationCodes.ERROR_DIAGNOSTIC_REQUEST_FAILED, exception.getErrorDeviation().code());
     }
 
     @Test
-    public void getTimestampingServiceDiagnosticsSuccess() {
-        stubForDiagnosticsRequest("/timestampstatus",
-                "{\"" + TSA_URL_1 + "\":{\"returnCode\":" + DiagnosticsErrorCodes.RETURN_SUCCESS
-                        + ",\"prevUpdate\":\"" + PREVIOUS_UPDATE + "\",\"description\":\"" + TSA_URL_1 + "\"}}");
-
+    public void getTimestampingServiceDiagnosticsSuccess() throws Exception {
+        when(proxyRpcClient.getTimestampingStatus()).thenReturn(
+                Map.of(TSA_URL_1, new DiagnosticsStatus(DiagnosticsErrorCodes.RETURN_SUCCESS,
+                        PREVIOUS_UPDATE, TSA_URL_1))
+        );
         ResponseEntity<Set<TimestampingServiceDiagnosticsDto>> response =
                 diagnosticsApiController.getTimestampingServicesDiagnostics();
 
@@ -262,10 +257,11 @@ public class DiagnosticsApiControllerTest extends AbstractApiControllerTestConte
     }
 
     @Test
-    public void getTimestampingServiceDiagnosticsWaiting() {
-        stubForDiagnosticsRequest("/timestampstatus",
-                "{\"" + TSA_URL_1 + "\":{\"returnCode\":" + DiagnosticsErrorCodes.ERROR_CODE_TIMESTAMP_UNINITIALIZED
-                        + ",\"prevUpdate\":\"" + PREVIOUS_UPDATE + "\",\"description\":\"" + TSA_URL_1 + "\"}}");
+    public void getTimestampingServiceDiagnosticsWaiting() throws Exception {
+        when(proxyRpcClient.getTimestampingStatus()).thenReturn(
+                Map.of(TSA_URL_1, new DiagnosticsStatus(DiagnosticsErrorCodes.ERROR_CODE_TIMESTAMP_UNINITIALIZED,
+                        PREVIOUS_UPDATE, TSA_URL_1))
+        );
 
         ResponseEntity<Set<TimestampingServiceDiagnosticsDto>> response =
                 diagnosticsApiController.getTimestampingServicesDiagnostics();
@@ -285,11 +281,11 @@ public class DiagnosticsApiControllerTest extends AbstractApiControllerTestConte
     }
 
     @Test
-    public void getTimestampingServiceDiagnosticsFailPreviousUpdateYesterday() {
-        stubForDiagnosticsRequest("/timestampstatus",
-                "{\"" + TSA_URL_1 + "\":{\"returnCode\":"
-                        + DiagnosticsErrorCodes.ERROR_CODE_MALFORMED_TIMESTAMP_SERVER_URL + ",\"prevUpdate\":\""
-                        + PREVIOUS_UPDATE_MIDNIGHT + "\",\"description\":\"" + TSA_URL_1 + "\"}}");
+    public void getTimestampingServiceDiagnosticsFailPreviousUpdateYesterday() throws Exception {
+        when(proxyRpcClient.getTimestampingStatus()).thenReturn(
+                Map.of(TSA_URL_1, new DiagnosticsStatus(DiagnosticsErrorCodes.ERROR_CODE_MALFORMED_TIMESTAMP_SERVER_URL,
+                        PREVIOUS_UPDATE_MIDNIGHT, TSA_URL_1))
+        );
 
         ResponseEntity<Set<TimestampingServiceDiagnosticsDto>> response =
                 diagnosticsApiController.getTimestampingServicesDiagnostics();
@@ -309,22 +305,21 @@ public class DiagnosticsApiControllerTest extends AbstractApiControllerTestConte
     }
 
     @Test
-    public void getTimestampingServiceDiagnosticsException() {
-        stubFor(get(urlEqualTo("/timestampstatus"))
-                .willReturn(aResponse().withStatus(HttpStatus.INTERNAL_SERVER_ERROR.value())));
+    public void getTimestampingServiceDiagnosticsException() throws Exception {
+        when(proxyRpcClient.getTimestampingStatus()).thenThrow(new Exception());
         DeviationAwareRuntimeException exception = assertThrows(DeviationAwareRuntimeException.class,
                 diagnosticsApiController::getTimestampingServicesDiagnostics);
         assertEquals(DeviationCodes.ERROR_DIAGNOSTIC_REQUEST_FAILED, exception.getErrorDeviation().code());
     }
 
     @Test
-    public void getOcspResponderDiagnosticsSuccess() {
-        stubForDiagnosticsRequest("/status",
-                "{\"certificationServiceStatusMap\":{\"" + CA_NAME_1 + "\":{\"name\":\"" + CA_NAME_1
-                        + "\",\"ocspResponderStatusMap\":{\"" + OCSP_URL_1 + "\":{\"status\":"
-                        + DiagnosticsErrorCodes.RETURN_SUCCESS + ",\"url\":\""
-                        + OCSP_URL_1 + "\",\"prevUpdate\":\"" + PREVIOUS_UPDATE + "\",\"nextUpdate\":\"" + NEXT_UPDATE
-                        + "\"}}}}}");
+    public void getOcspResponderDiagnosticsSuccess() throws Exception {
+        var certServiceStatus = new CertificationServiceStatus(CA_NAME_1);
+        certServiceStatus.getOcspResponderStatusMap().put(OCSP_URL_1,
+                new OcspResponderStatus(DiagnosticsErrorCodes.RETURN_SUCCESS, OCSP_URL_1, PREVIOUS_UPDATE, NEXT_UPDATE));
+        var diagnosticsResponse = new CertificationServiceDiagnostics();
+        diagnosticsResponse.update(Map.of(CA_NAME_1, certServiceStatus));
+        when(signerRpcClient.getCertificationServiceDiagnostics()).thenReturn(diagnosticsResponse);
 
         ResponseEntity<Set<OcspResponderDiagnosticsDto>> response =
                 diagnosticsApiController.getOcspRespondersDiagnostics();
@@ -335,20 +330,21 @@ public class DiagnosticsApiControllerTest extends AbstractApiControllerTestConte
         OcspResponderDiagnosticsDto diagnostics = diagnosticsSet.stream().findFirst().orElse(null);
         assertEquals(1, diagnostics.getOcspResponders().size());
         assertEquals(CA_NAME_1, diagnostics.getDistinguishedName());
-        assertEquals(OcspStatusDto.SUCCESS, diagnostics.getOcspResponders().get(0).getStatusCode());
-        assertEquals(DiagnosticStatusClassDto.OK, diagnostics.getOcspResponders().get(0).getStatusClass());
-        assertEquals(PREVIOUS_UPDATE, diagnostics.getOcspResponders().get(0).getPrevUpdateAt());
-        assertEquals(NEXT_UPDATE, diagnostics.getOcspResponders().get(0).getNextUpdateAt());
-        assertEquals(OCSP_URL_1, diagnostics.getOcspResponders().get(0).getUrl());
+        assertEquals(OcspStatusDto.SUCCESS, diagnostics.getOcspResponders().getFirst().getStatusCode());
+        assertEquals(DiagnosticStatusClassDto.OK, diagnostics.getOcspResponders().getFirst().getStatusClass());
+        assertEquals(PREVIOUS_UPDATE, diagnostics.getOcspResponders().getFirst().getPrevUpdateAt());
+        assertEquals(NEXT_UPDATE, diagnostics.getOcspResponders().getFirst().getNextUpdateAt());
+        assertEquals(OCSP_URL_1, diagnostics.getOcspResponders().getFirst().getUrl());
     }
 
     @Test
     public void getOcspResponderDiagnosticsWaiting() {
-        stubForDiagnosticsRequest("/status",
-                "{\"certificationServiceStatusMap\":{\"" + CA_NAME_2 + "\":{\"name\":\"" + CA_NAME_2 + "\","
-                        + "\"ocspResponderStatusMap\":{\"" + OCSP_URL_2 + "\":{\"status\":"
-                        + DiagnosticsErrorCodes.ERROR_CODE_OCSP_UNINITIALIZED + ",\"url\":\"" + OCSP_URL_2
-                        + "\",\"nextUpdate\":\"" + NEXT_UPDATE + "\"}}}}}");
+        var certServiceStatus = new CertificationServiceStatus(CA_NAME_2);
+        certServiceStatus.getOcspResponderStatusMap().put(OCSP_URL_1,
+                new OcspResponderStatus(DiagnosticsErrorCodes.ERROR_CODE_OCSP_UNINITIALIZED, OCSP_URL_2, null, NEXT_UPDATE));
+        var diagnosticsResponse = new CertificationServiceDiagnostics();
+        diagnosticsResponse.update(Map.of(CA_NAME_2, certServiceStatus));
+        when(signerRpcClient.getCertificationServiceDiagnostics()).thenReturn(diagnosticsResponse);
 
         ResponseEntity<Set<OcspResponderDiagnosticsDto>> response =
                 diagnosticsApiController.getOcspRespondersDiagnostics();
@@ -360,20 +356,21 @@ public class DiagnosticsApiControllerTest extends AbstractApiControllerTestConte
         assertEquals(1, diagnostics.getOcspResponders().size());
         assertEquals(CA_NAME_2, diagnostics.getDistinguishedName());
         assertEquals(OcspStatusDto.ERROR_CODE_OCSP_UNINITIALIZED, diagnostics.getOcspResponders()
-                .get(0).getStatusCode());
-        assertEquals(DiagnosticStatusClassDto.WAITING, diagnostics.getOcspResponders().get(0).getStatusClass());
-        assertNull(diagnostics.getOcspResponders().get(0).getPrevUpdateAt());
-        assertEquals(NEXT_UPDATE, diagnostics.getOcspResponders().get(0).getNextUpdateAt());
-        assertEquals(OCSP_URL_2, diagnostics.getOcspResponders().get(0).getUrl());
+                .getFirst().getStatusCode());
+        assertEquals(DiagnosticStatusClassDto.WAITING, diagnostics.getOcspResponders().getFirst().getStatusClass());
+        assertNull(diagnostics.getOcspResponders().getFirst().getPrevUpdateAt());
+        assertEquals(NEXT_UPDATE, diagnostics.getOcspResponders().getFirst().getNextUpdateAt());
+        assertEquals(OCSP_URL_2, diagnostics.getOcspResponders().getFirst().getUrl());
     }
 
     @Test
     public void getOcspResponderDiagnosticsFailNextUpdateTomorrow() {
-        stubForDiagnosticsRequest("/status",
-                "{\"certificationServiceStatusMap\":{\"" + CA_NAME_1 + "\":{\"name\":\"" + CA_NAME_1
-                        + "\",\"ocspResponderStatusMap\":{\"" + OCSP_URL_1 + "\":{\"status\":"
-                        + DiagnosticsErrorCodes.ERROR_CODE_OCSP_RESPONSE_INVALID + ",\"url\":\"" + OCSP_URL_1
-                        + "\",\"nextUpdate\":\"" + NEXT_UPDATE_MIDNIGHT + "\"}}}}}");
+        var certServiceStatus = new CertificationServiceStatus(CA_NAME_1);
+        certServiceStatus.getOcspResponderStatusMap().put(OCSP_URL_1,
+                new OcspResponderStatus(DiagnosticsErrorCodes.ERROR_CODE_OCSP_RESPONSE_INVALID, OCSP_URL_1, null, NEXT_UPDATE_MIDNIGHT));
+        var diagnosticsResponse = new CertificationServiceDiagnostics();
+        diagnosticsResponse.update(Map.of(CA_NAME_1, certServiceStatus));
+        when(signerRpcClient.getCertificationServiceDiagnostics()).thenReturn(diagnosticsResponse);
 
         ResponseEntity<Set<OcspResponderDiagnosticsDto>> response = diagnosticsApiController
                 .getOcspRespondersDiagnostics();
@@ -385,20 +382,21 @@ public class DiagnosticsApiControllerTest extends AbstractApiControllerTestConte
         assertEquals(1, diagnostics.getOcspResponders().size());
         assertEquals(CA_NAME_1, diagnostics.getDistinguishedName());
         assertEquals(OcspStatusDto.ERROR_CODE_OCSP_RESPONSE_INVALID, diagnostics.getOcspResponders()
-                .get(0).getStatusCode());
-        assertEquals(DiagnosticStatusClassDto.FAIL, diagnostics.getOcspResponders().get(0).getStatusClass());
-        assertNull(diagnostics.getOcspResponders().get(0).getPrevUpdateAt());
-        assertEquals(NEXT_UPDATE_MIDNIGHT, diagnostics.getOcspResponders().get(0).getNextUpdateAt());
-        assertEquals(OCSP_URL_1, diagnostics.getOcspResponders().get(0).getUrl());
+                .getFirst().getStatusCode());
+        assertEquals(DiagnosticStatusClassDto.FAIL, diagnostics.getOcspResponders().getFirst().getStatusClass());
+        assertNull(diagnostics.getOcspResponders().getFirst().getPrevUpdateAt());
+        assertEquals(NEXT_UPDATE_MIDNIGHT, diagnostics.getOcspResponders().getFirst().getNextUpdateAt());
+        assertEquals(OCSP_URL_1, diagnostics.getOcspResponders().getFirst().getUrl());
     }
 
     @Test
     public void getOcspResponderDiagnosticsFailPreviousUpdateYesterday() {
-        stubForDiagnosticsRequest("/status",
-                "{\"certificationServiceStatusMap\":{\"" + CA_NAME_2 + "\":{\"name\":\"" + CA_NAME_2
-                        + "\",\"ocspResponderStatusMap\":{\"" + OCSP_URL_2 + "\":{\"status\":" + ERROR_CODE_UNKNOWN
-                        + ",\"url\":\"" + OCSP_URL_2 + "\",\"prevUpdate\":\""
-                        + PREVIOUS_UPDATE_MIDNIGHT + "\",\"nextUpdate\":\"" + NEXT_UPDATE_MIDNIGHT + "\"}}}}}");
+        var certServiceStatus = new CertificationServiceStatus(CA_NAME_2);
+        certServiceStatus.getOcspResponderStatusMap().put(OCSP_URL_2,
+                new OcspResponderStatus(ERROR_CODE_UNKNOWN, OCSP_URL_2, PREVIOUS_UPDATE_MIDNIGHT, NEXT_UPDATE_MIDNIGHT));
+        var diagnosticsResponse = new CertificationServiceDiagnostics();
+        diagnosticsResponse.update(Map.of(CA_NAME_2, certServiceStatus));
+        when(signerRpcClient.getCertificationServiceDiagnostics()).thenReturn(diagnosticsResponse);
 
         ResponseEntity<Set<OcspResponderDiagnosticsDto>> response = diagnosticsApiController
                 .getOcspRespondersDiagnostics();
@@ -412,17 +410,16 @@ public class DiagnosticsApiControllerTest extends AbstractApiControllerTestConte
                 .orElse(null);
         assertEquals(1, diagnostics.getOcspResponders().size());
         assertEquals(CA_NAME_2, diagnostics.getDistinguishedName());
-        assertEquals(OcspStatusDto.UNKNOWN, diagnostics.getOcspResponders().get(0).getStatusCode());
-        assertEquals(DiagnosticStatusClassDto.FAIL, diagnostics.getOcspResponders().get(0).getStatusClass());
-        assertEquals(PREVIOUS_UPDATE_MIDNIGHT, diagnostics.getOcspResponders().get(0).getPrevUpdateAt());
-        assertEquals(NEXT_UPDATE_MIDNIGHT, diagnostics.getOcspResponders().get(0).getNextUpdateAt());
-        assertEquals(OCSP_URL_2, diagnostics.getOcspResponders().get(0).getUrl());
+        assertEquals(OcspStatusDto.UNKNOWN, diagnostics.getOcspResponders().getFirst().getStatusCode());
+        assertEquals(DiagnosticStatusClassDto.FAIL, diagnostics.getOcspResponders().getFirst().getStatusClass());
+        assertEquals(PREVIOUS_UPDATE_MIDNIGHT, diagnostics.getOcspResponders().getFirst().getPrevUpdateAt());
+        assertEquals(NEXT_UPDATE_MIDNIGHT, diagnostics.getOcspResponders().getFirst().getNextUpdateAt());
+        assertEquals(OCSP_URL_2, diagnostics.getOcspResponders().getFirst().getUrl());
     }
 
     @Test
     public void getOcspResponderDiagnosticsException() {
-        stubFor(get(urlEqualTo("/status"))
-                .willReturn(aResponse().withStatus(HttpStatus.INTERNAL_SERVER_ERROR.value())));
+        when(signerRpcClient.getCertificationServiceDiagnostics()).thenThrow(new RuntimeException());
         DeviationAwareRuntimeException exception = assertThrows(DeviationAwareRuntimeException.class,
                 diagnosticsApiController::getOcspRespondersDiagnostics);
         assertEquals(DeviationCodes.ERROR_DIAGNOSTIC_REQUEST_FAILED, exception.getErrorDeviation().code());
@@ -430,7 +427,7 @@ public class DiagnosticsApiControllerTest extends AbstractApiControllerTestConte
 
     @Test
     @WithMockUser(authorities = {"DOWNLOAD_ANCHOR"})
-    public void downloadDiagnosticsReportWithoutRequiredAuthorities() throws IOException {
+    public void downloadDiagnosticsReportWithoutRequiredAuthorities() throws Exception {
         byte[] bytes = "[{}]".getBytes(StandardCharsets.UTF_8);
         when(diagnosticReportService.collectSystemInformation()).thenReturn(bytes);
         when(systemService.getAnchorFilenameForDownload())
@@ -441,7 +438,7 @@ public class DiagnosticsApiControllerTest extends AbstractApiControllerTestConte
 
     @Test
     @WithMockUser(authorities = {"DOWNLOAD_DIAGNOSTICS_REPORT"})
-    public void downloadDiagnosticsReport() throws IOException {
+    public void downloadDiagnosticsReport() throws Exception {
         byte[] bytes = "[{}]".getBytes(StandardCharsets.UTF_8);
         when(diagnosticReportService.collectSystemInformation()).thenReturn(bytes);
         when(systemService.getAnchorFilenameForDownload())
@@ -453,8 +450,13 @@ public class DiagnosticsApiControllerTest extends AbstractApiControllerTestConte
         assertThat(response.getBody().contentLength()).isEqualTo(bytes.length);
     }
 
-    private void stubForDiagnosticsRequest(String requestPath, String responseBody) {
-        stubFor(get(urlEqualTo(requestPath))
-                .willReturn(aResponse().withBody(responseBody)));
+    private org.niis.xroad.confclient.proto.DiagnosticsStatus createDiagnosticsStatus(int statusCode,
+                                                                                      Instant prevUpdate,
+                                                                                      Instant nextUpdate) {
+        return org.niis.xroad.confclient.proto.DiagnosticsStatus.newBuilder()
+                .setReturnCode(statusCode)
+                .setPrevUpdate(prevUpdate.toEpochMilli())
+                .setNextUpdate(nextUpdate.toEpochMilli())
+                .build();
     }
 }
